# mcp-selenium-haskel

./: .gitignore  API.md  CHANGELOG.md  CONTRIBUTORS.md  LICENSE  Main.hs  PR_DESCRIPTION.md  README.md  RELEASE_CHECKLIST.md  TODO.md  TROUBLESHOOTING.md  agent.sh  cabal.project  codemcp.toml  debug_mcp.py  flake.nix  gen_run_hoogle.sh  mcp-selenium.cabal  mcp_language_haskell.sh  orchestrate_integration_tests.py  pyproject.toml  pytest.ini  run_branch_changes.sh  run_branch_log.sh  run_changed_files.sh  run_client.sh  run_create_pr.sh  run_integration_tests.sh  validate_integration_setup.py
.github/workflows/: release.yml  test.yml
app/: Main.hs
integration_tests/: INTEGRATION_TEST_SUMMARY.md  README.md  orchestrate_integration_tests.py
integration_tests/fixtures/: .gitkeep
integration_tests/fixtures/html/: .gitkeep  actions_test_page.html  multi_elements_page.html  test_page.html
integration_tests/fixtures/test_files/: .gitkeep
integration_tests/integration/: conftest.py  test_actions.py  test_browser_config.py.disabled  test_browser_management.py  test_console_logging.py  test_core_focused.py  test_element_interaction.py  test_error_handling.py.disabled  test_execute_js.py  test_get_source.py  test_js_error_rendering.py  test_multiple_elements.py  test_navigation.py  test_performance.py.disabled  test_screenshots.py
integration_tests/utils/: html_server.py  mcp_client.py
nix/: hix.nix  treefmt.nix
nix/materialized/: default.nix  plan.json
nix/materialized/.plan.nix/: hs-mcp.nix  mcp-selenium.nix
nix/materialized/cabal-files/: aeson-qq.nix  aeson.nix  blaze-builder.nix  happy-lib.nix  happy.nix  haskell-src-meta.nix  hspec-core.nix  hspec-discover.nix  hspec.nix  raw-strings-qq.nix  splitmix.nix  webdriver.nix  zip-archive.nix  zlib-clib.nix
src/MCP/Selenium/: Server.hs  Tools.hs  Types.hs  Utils.hs  WebDriver.hs
test/: SessionTest.hs  Test.hs
tests/: INTEGRATION_TEST_SUMMARY.md  README.md
tests/fixtures/html/: form_page.html  test_page_with_js_error.html  upload_page.html
tests/integration/: conftest.py  test_actions.py.disabled  test_advanced_elements.py.disabled  test_browser_management.py  test_console_logging.py  test_core_focused.py  test_element_interaction.py  test_file_upload.py.disabled  test_javascript.py.disabled  test_logging.py.disabled  test_navigation.py  test_screenshots.py
tests/utils/: html_server.py  mcp_client.py
